--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "signature_48sp"
-version = "0.1.0"
+name = "sign48sp"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
 secp256k1 = { version = "0.30.0", features = ["recovery"] }
 sha3 = "0.10"
 hex = "0.4"
-
-[dev-dependencies]
-anyhow = "1.0" # For better error handling in main example and tests
